[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "slconsole"
version = "0.1.0"
description = "SeaLion Console — personal tool vault for pentesters"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
rich = ["rich"]

[project.scripts]
slconsole = "sealion:main"
sealsay = "sealion:sealsay_main"

[tool.setuptools]
py-modules = ["sealion"]
